--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <script src="easeljs-0.8.2.min.js"></script>
+    <script src="circle.js"></script>
 </head>
 <body>
     <canvas width="800px" height="800px" id="gameView"></canvas>
