--- a/index.html
+++ b/index.html
@@ -34,13 +34,15 @@
             cvs.style.left="50%";
             cvs.style.marginLeft=-(cvs.scrollWidth/2)+"px";
             scbox.style.top="50%";
-
+            scbox.style.marginTop=-(scbox.scrollHeight/2)+"px";
             scbox.style.left="50%";
-
+            scbox.style.marginLeft=-(scbox.scrollWidth/2)+"px";
             flbox.style.top="50%";
-
+            flbox.style.marginTop=-(flbox.scrollHeight/2)+"px";
             flbox.style.left="50%";
-
+            flbox.style.marginLeft=-(flbox.scrollWidth/2)+"px";
+            scbox.style.display="none";
+            flbox.style.display="none";
         }
         function againGame() {
             window.location.href=window.location.href;
