--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <title>抓住神经猫Lite版</title>
     <link type="text/css" href="css/index.css" rel="stylesheet">
-    <link href="css/font-awesome.min.css" rel="stylesheet">
+    <link type="text/css" href="css/font-awesome.min.css" rel="stylesheet">
+    <link type="text/css" rel="script" href="css/bootstrap.min.css">
+    <script src="js/jquery-3.2.1.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+
 </head>
-<body onload="centered()">
+<body>
     <div id="FailBox">
         <h4>你个辣鸡</h4>
         <h2>你没有抓住神经猫</h2>
@@ -14,18 +18,23 @@
         <button class="againGame"  onclick="againGame()">再抓一次</button>
     </div>
     <div id="SuccessBox" >
-        <h4>厉害了word锅</h4>
-        <h2>你用 <span id="step" class="gold">10</span> 步抓住了神经猫</h2>
-        <label>— 神经病院长给你打 <span id="score" class="gold">99</span> 分 —</label><br>
+        <h4 id="SuccessBox-h4">厉害了word锅</h4>
+        <h2>你用 <span id="step" class="gold">0</span> 步抓住了神经猫</h2>
+        <label>— 神经病院长给你打 <span id="score" class="gold">0</span> 分 —</label><br>
         <button class="againGame" onclick="againGame()">再抓一次</button>
     </div>
-    <div id="title">
-        <label onclick="againGame()" id="title-againGame"><i class="fa fa-refresh" aria-hidden="true"></i>重玩</label>
-        <label>步数: <span id="nowStep">0</span></label>
-    </div>
+
     <script src="js/easeljs-0.8.2.min.js"></script>
     <script src="js/circle.js"></script>
-    <canvas width="525px" height="500px" id="gameView"></canvas>
+    <div class="container">
+        <div id="title">
+            <label onclick="againGame()" id="title-againGame"><i class="fa fa-refresh" aria-hidden="true"></i>重玩</label>
+            <label class="title-tip">步数: <span id="nowStep">0</span></label>
+            <label class="title-tip">最高分: <span id="heightestScore">0</span></label>
+        </div>
+        <canvas width="525px" height="500px" id="gameView"></canvas>
+    </div>
+
     <script src="js/app.js"></script>
     <script src="js/index.js"></script>
 </body>
