--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
     <title>抓住神经猫Lite版</title>
     <link type="text/css" href="css/index.css" rel="stylesheet">
     <link type="text/css" href="css/font-awesome.min.css" rel="stylesheet">
-    <link type="text/css" rel="script" href="css/bootstrap.min.css">
+    <link type="text/css" rel="script" href="css/bootstrap.css">
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 
@@ -26,7 +28,7 @@
 
     <script src="js/easeljs-0.8.2.min.js"></script>
     <script src="js/circle.js"></script>
-    <div class="container">
+    <div class="container" width="600px">
         <div id="title">
             <label onclick="againGame()" id="title-againGame"><i class="fa fa-refresh" aria-hidden="true"></i>重玩</label>
             <label class="title-tip">步数: <span id="nowStep">0</span></label>
@@ -34,7 +36,6 @@
         </div>
         <canvas width="525px" height="500px" id="gameView"></canvas>
     </div>
-
     <script src="js/app.js"></script>
     <script src="js/index.js"></script>
 </body>
